--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
+importFrom(latex2exp,TeX)
