--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Authors@R: c(
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
 Encoding: UTF-8
+LazyData: true
 https: //github.com/dplecko/fairadapt/issues
 Depends:
     R (>= 4.0.0)
