HAI challenge vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(autoplot,faircause)
 S3method(print,faircause)
 S3method(summary,faircause)
 export(fairness_cookbook)
+export(fairness_cookbook_eo)
 import(stats)
 importFrom(assertthat,assert_that)
 importFrom(ggplot2,aes)
