--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,6 @@ Suggests:
     igraph,
     scales
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 VignetteBuilder: knitr
+Config/testthat/edition: 3
