--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,25 @@
 
 S3method(autoplot,faircause)
 S3method(print,faircause)
+S3method(print,summary.faircause)
 S3method(summary,faircause)
+export(SFM_proj)
 export(fairness_cookbook)
 export(fairness_cookbook_eo)
 import(stats)
 importFrom(assertthat,assert_that)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
-importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,position_fill)
 importFrom(ggplot2,scale_fill_discrete)
+importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
