--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
+importFrom(grf,causal_forest)
 importFrom(latex2exp,TeX)
