--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
