--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.qmd linguist-detectable=false
 *.Rmd linguist-detectable=false
 *.html linguist-detectable=false
+*.html linguist-language=HTML
+*.js linguist-language=JavaScript
+*.css linguist-language=CSS
