--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,3 +45,6 @@ importFrom(grf,causal_forest)
 importFrom(latex2exp,TeX)
 importFrom(reticulate,py_run_file)
 importFrom(reticulate,source_python)
+importFrom(xgboost,xgb.DMatrix)
+importFrom(xgboost,xgb.cv)
+importFrom(xgboost,xgb.train)
