--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: faircause
 Title: Causal Fairness Analysis
-Version: 0.2.0
+Version: 0.3.0
 Authors@R: c(
     person(given = "Drago",
            family = "Plecko",
@@ -20,7 +20,8 @@ Imports:
     ggplot2,
     latex2exp,
     reticulate,
-    grf
+    grf,
+    xgboost
 Suggests:
     testthat (>= 3.0.3),
     knitr,
@@ -39,6 +40,6 @@ Suggests:
     scales,
     xgboost
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 VignetteBuilder: knitr
 Config/testthat/edition: 3
